# DataAbstraction-intersectionAlgorithm

./: README.md
.github/workflows/: build.yml
config/: gatorgrader.yml
intersection/: pyproject.toml
intersection/intersection/: main.py
intersection/tests/: __init__.py  test_intersection.py
writing/: reflection.md
