[tool.poetry]
name = "intersection"
version = "0.1.0"
description = ""
authors = ["Gregory M. Kapfhammer <gkapfham@allegheny.edu>"]

[tool.poetry.scripts]
intersection = "intersection.main:cli"

[tool.poetry.dependencies]
python = "^3.8"
typer = {extras = ["all"], version = "^0.3.2"}
rich = "^10.9.0"
pyinstrument = "^4.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.8b0"
taskipy = "^1.8.1"
flake8 = "^3.9.2"
pydocstyle = "^6.1.1"
pylint = "^2.10.2"
mypy = "^0.910"

[tool.taskipy.tasks]
black = { cmd = "black intersection tests --check", help = "Run the black checks for source code format" }
flake8 = { cmd = "flake8 intersection tests", help = "Run the flake8 checks for source code documentation" }
mypy = { cmd = "poetry run mypy intersection", help = "Run the mypy type checker for potential type errors" }
pydocstyle = { cmd = "pydocstyle intersection tests", help = "Run the pydocstyle checks for source code documentation" }
pylint = { cmd = "pylint intersection tests", help = "Run the pylint checks for source code documentation" }
test = { cmd = "pytest -x -s", help = "Run the pytest test suite" }
test-silent = { cmd = "pytest -x --show-capture=no", help = "Run the pytest test suite without showing output" }
all = "task black && task flake8 && task pydocstyle && task pylint && task mypy && task test"
lint = "task black && task flake8 && task pydocstyle && task pylint"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
